# arxiv-summarizer

./: .env.example  .gitignore  README.md  main.py  prompts.py  pyproject.toml  requirements.txt
src/: author_lookup.py  config.py  main.py  openai_client.py  paper_search.py  pdf_processor.py  prompts.py  twitter_auth.py  twitter_client.py  utils.py
