[project]
name = "arxiv-summarizer"
version = "1.0.0"
description = "A modular system that fetches research papers from arXiv, summarizes them using AI, and posts to Twitter with author tagging"
authors = [
    { name = "Bence Farkas", email = "your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["arxiv", "ai", "twitter", "research", "summarization", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anyio>=4.10.0",
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.5",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "feedparser>=6.0.11",
    "filetype>=1.2.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "Js2Py_3.13>=0.74.1",
    "lxml>=6.0.1",
    "m3u8>=6.0.0",
    "numpy>=2.3.2",
    "oauthlib>=3.3.1",
    "pillow>=11.3.0",
    "pyjsparser>=2.7.1",
    "PyMuPDF>=1.26.4",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "sgmllib3k>=1.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "socksio>=1.0.0",
    "soupsieve>=2.8",
    "tweepy>=4.16.0",
    "twikit>=2.3.3",
    "typing_extensions>=4.15.0",
    "tzlocal>=5.3.1",
    "urllib3>=2.5.0",
    "webvtt-py>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/skillsharer/arxiv-summarizer"
Repository = "https://github.com/skillsharer/arxiv-summarizer"
Issues = "https://github.com/skillsharer/arxiv-summarizer/issues"
Documentation = "https://github.com/skillsharer/arxiv-summarizer/blob/main/README.md"

[project.scripts]
arxiv-summarizer = "main:tweet_arxiv_papers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
